--- a/Blair.csproj
+++ b/Blair.csproj
@@ -48,12 +48,13 @@
   <ItemGroup>
     <Compile Include="Compiler\Compiler.cs" />
     <Compile Include="Compiler\Run\Lexical.cs" />
-    <Compile Include="Compiler\Run\Syntatic.cs" />
+    <Compile Include="Compiler\Run\Syntactic.cs" />
     <Compile Include="Compiler\Tokens\First.cs" />
     <Compile Include="Compiler\Tokens\Follow.cs" />
     <Compile Include="Compiler\Tokens\Reserved.cs" />
     <Compile Include="Compiler\Tokens\Token.cs" />
     <Compile Include="Compiler\Triggers\Error.cs" />
+    <Compile Include="Compiler\Util\Files.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
